hecho hasta el punto 7

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,6 @@
 {
+    "Sent": "Enviado",
+    "Send": "Enviar",
     "Public": "Publica",
     "Private": "Privada",
     "Titularity": "Titularidad",
