--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,12 +1,4 @@
 {
-    "Sent": "Enviado",
-    "Send": "Enviar",
-    "Public": "Publica",
-    "Private": "Privada",
-    "Titularity": "Titularidad",
-    "Identification type": "Tipo identificable",
-    "Codes": "Codigos",
-    "Postal Direction": "Dirección Postal",
     "Home": "Inicio",
     "About": "Sobre",
     "Project": "Projecto",
@@ -20,7 +12,7 @@
     "Country of identity": "Pais documento de identidad",
     "Province": "Provincia",
     "Municipality": "Municipio",
-    "Titularity": "Titularidad",
+    "Document type": "Tipo de documento",
     "Telephone": "Teléfono",
     "State": "Estado",
     "Send": "Enviar",
