Segundo examen de recuperación de PHP

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,12 @@
 {
+    "Sent": "Enviado",
+    "Send": "Enviar",
+    "Public": "Publica",
+    "Private": "Privada",
+    "Titularity": "Titularidad",
+    "Identification type": "Tipo identificable",
+    "Codes": "Codigos",
+    "Postal Direction": "Dirección Postal",
     "Home": "Inicio",
     "About": "Sobre",
     "Project": "Projecto",
@@ -12,7 +20,7 @@
     "Country of identity": "Pais documento de identidad",
     "Province": "Provincia",
     "Municipality": "Municipio",
-    "Document type": "Tipo de documento",
+    "Titularity": "Titularidad",
     "Telephone": "Teléfono",
     "State": "Estado",
     "Send": "Enviar",
